--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -206,7 +206,7 @@
                                             <div class="tab">
                                                 <ul class="nav nav-tabs">
                                                     <li class="nav-item active">
-                                                        <a class="nav-link active" data-toggle="tab" href="#home">
+                                                        <a class="nav-link active" data-toggle="tab" href="#chat-public">
                                                             <div class="box-icon-chat icon-public">
                                                                 <svg class="icon icon-px_ic__Chat">
                                                                     <use xlink:href="#icon-px_ic__Chat"></use>
@@ -215,7 +215,7 @@
                                                         </a>
                                                     </li>
                                                     <li class="nav-item">
-                                                        <a class="nav-link" data-toggle="tab" href="#menu1">
+                                                        <a class="nav-link" data-toggle="tab" href="#chat-group">
                                                             <div class="box-icon-chat icon-public">
                                                                 <svg class="icon icon-px_ic__Option">
                                                                     <use xlink:href="#icon-px_ic__Option"></use>
@@ -224,7 +224,7 @@
                                                         </a>
                                                     </li>
                                                     <li class="nav-item">
-                                                        <a class="nav-link" data-toggle="tab" href="#menu2">
+                                                        <a class="nav-link" data-toggle="tab" href="#chat-particular">
                                                             <div class="box-icon-chat icon-public">
                                                                 <svg class="icon icon-px_ic__User">
                                                                     <use xlink:href="#icon-px_ic__User"></use>
@@ -235,55 +235,22 @@
                                                     </li>
                                                 </ul>
                                                 <div class="tab-content">
-                                                    <div id="home" class="tab-pane active">
+                                                    <div id="chat-public" class="tab-pane active">
                                                         <div>
                                                             <div id="sideToolbarContainerChat">
                                                                 <div id="chat_container" data-userid-private="0"
                                                                      class="sideToolbarContainer__inner">
                                                                     <div id="chatconversation">
-                                                                        <div class="box-content-chat">
-                                                                            <div class="chatmessage chatmessageReceived">
-                                                                                <div class="username remoteuser">
-                                                                                    Vuk
-                                                                                    LAZAREVIĆ
-                                                                                </div>
-                                                                                <div class="timestamp">19:10:01</div>
-                                                                                <div class="usermessage">
-                                                                                    <p class="userMessageContentReceived">
-                                                                                        Designate (v) /ˈdezɪɡneɪt/ to
-                                                                                        show something using a
-                                                                                        particular mark or sign
-                                                                                    </p>
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="box-content-chat">
-                                                                            <div class="chatmessage chatmessageReceived">
-                                                                                <div class="username remoteuser">
-                                                                                    Vuk
-                                                                                    LAZAREVIĆ
-                                                                                </div>
-                                                                                <div class="timestamp">19:22:17</div>
-                                                                                <div class="usermessage">
-                                                                                    <p class="userMessageContentReceived">
-                                                                                        If you cancel now you will mess
-                                                                                        up all my arrangements
-                                                                                    </p>
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="box-content-chat"><div class="chatmessage"><div class="username localuser"></div><div class="timestamp">14:54:44</div><div class="usermessage"><p class="userMessageContent">Good afternoon</p></div></div></div>
                                                                     </div>
-                                                                    <textarea id="messageBox" class="text-area" spellcheck="false" id="usermsg" data-i18n="[placeholder]chat.messagebox" placeholder="Nhập tin nhắn"></textarea>
-                                                                    <input id="sendButton" type="button" value="Send"/>
+                                                                    <textarea class="text-area" spellcheck="false" id="usermsg" data-i18n="[placeholder]chat.messagebox" placeholder="Nhập tin nhắn"></textarea>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div id="menu1" class="tab-pane fade">
+                                                    <div id="chat-group" class="tab-pane fade">
                                                         <div>
                                                             <ul id="chat-userlist" class="list-group chat-userlist">
-                                                                <a class="nav-link" data-toggle="tab" href="#menu2">
+                                                                <a class="nav-link" data-toggle="tab" href="#chat-particular">
                                                                     <li class="contact-list-item">
                                                                         <div class="group-icon-device">
                                                                             <div class="box-icon-device">
@@ -307,7 +274,7 @@
                                                             </ul>
                                                         </div>
                                                     </div>
-                                                    <div id="menu2" class="tab-pane">
+                                                    <div id="chat-particular" class="tab-pane">
                                                         <div>
                                                             <div id="sideToolbarContainerChat">
                                                                 <div id="chat_container" data-userid-private="0"
