--- a/AppEducation/AppEducation/Views/Home/Index.cshtml
+++ b/AppEducation/AppEducation/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <!-- slider-area-start -->
     <div class="slider-area">
         <div class="slider-active owl-carousel">
-            <div class="single-slider pt-125 pb-130 bg-img" style="background-image:url(~/pages/home/img/header-bg.jpg);">
+            <div class="single-slider pt-125 pb-130 bg-img" style="background-image:url(pages/home/img/header-bg.jpg);">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -20,7 +20,7 @@
                     </div>
                 </div>
             </div>
-            <div class="single-slider slider-h1-2 pt-215 pb-100 bg-img" style="background-image:url(~/pages/home/img/video-bg.jpg);">
+            <div class="single-slider slider-h1-2 pt-215 pb-100 bg-img" style="background-image:url(pages/home/img/video-bg.jpg);">
                 <div class="container">
                     <div class="slider-content slider-content-2 slider-animated-1">
                         <h1>Đăng Kí</h1>
@@ -82,46 +82,53 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-service">
-                        <h4><span class="lnr lnr-license"></span>	
-                            Lựa chọn cách thức học</h4>
+                        <h4>
+                            <span class="lnr lnr-license"></span>
+                            Lựa chọn cách thức học
+                        </h4>
                         <p>
                             Lớp học mở liên tục từ 8h - 12h cho phép học viên lựa chọn khung giờ học bất kỳ, học tiếng Anh online thỏa thích mà không phát sinh chi phí.
-                        </p>								
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-service">
-                        <h4><span class="lnr lnr-phone"></span>	
-                            Phương pháp PIALE</h4>
+                        <h4>
+                            <span class="lnr lnr-phone"></span>
+                            Phương pháp PIALE
+                        </h4>
                         <p>
-                            Phương pháp xoáy vòng 5 bước tiêu chuẩn chỉ có ở Topica Native: Luyện tập – Giao tiếp – Đánh giá – Bổ sung kiến thức – Kiểm tra khép vòng.  
-                        </p>								
+                            Phương pháp xoáy vòng 5 bước tiêu chuẩn chỉ có ở Topica Native: Luyện tập – Giao tiếp – Đánh giá – Bổ sung kiến thức – Kiểm tra khép vòng.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-service">
-                        <h4><span class="lnr lnr-rocket"></span>Technical Skills</h4>
+                        <h4><span class="lnr lnr-rocket"></span>Kiểm tra trình độ</h4>
                         <p>
-                            Usage of the Internet is becoming more common due to rapid advancement of technology and power.
-                        </p>				
+                            Khi bạn đăng ký thông tin, Topica Native sẽ liên lạc và gửi cho bạn bài kiểm tra hoàn toàn miễn phí,
+                            có thể giúp bạn đánh giá một cách chính xác nhất về trình độ tiếng Anh giao tiếp hiện tại của bạn.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-service">
-                        <h4><span class="lnr lnr-diamond"></span>Highly Recomended</h4>
+                        <h4><span class="lnr lnr-diamond"></span>Nhận tư vấn lộ trình học cá nhân</h4>
                         <p>
-                            Usage of the Internet is becoming more common due to rapid advancement of technology and power.
-                        </p>								
+                            Qua thông tin bài kiểm tra tiếng Anh. Topica Native sẽ hỗ trợ cung cấp tư vấn về lộ trình học riêng cho học viện.
+                            Lộ trình này được xây dựng riêng cho từng học viên và thường xuyên được cập nhật trình độ theo sự tiến bộ.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-service">
-                        <h4><span class="lnr lnr-bubble"></span>Positive Reviews</h4>
+                        <h4><span class="lnr lnr-bubble"></span>Bắt đầu quá trình học</h4>
                         <p>
-                            Usage of the Internet is becoming more common due to rapid advancement of technology and power.
-                        </p>									
+                            Chương trình học anh ngữ trực tuyến với giảng viên Âu Úc Mỹ,
+                            luyện nói thỏa thích tới 16 tiếng/ngày.Tạo môi trường giao tiếp anh ngữ ngay tại nhà.
+                        </p>
                     </div>
-                </div>						
+                </div>
             </div>
         </div>	
     </section>
