--- a/AppEducation/AppEducation/Views/Admin/Index.cshtml
+++ b/AppEducation/AppEducation/Views/Admin/Index.cshtml
@@ -72,75 +72,75 @@
     </div>
   </div>
 </section>
-
 <div class="content-wrapper" id="table-user" style="margin-right: 1px; display:none ; margin-left:1px ; width:100%">
-  <!-- Main content -->
-  <section class="content">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">Danh Sách Người Dùng</h3>
-            </div>
-            <!-- /.card-header -->
-            <div class="card-body">
-              <table id="example2" class="table table-bordered table-hover">
-                <thead>
-                  <tr>
-                    <th>STT</th>
-                    <th>ID</th>
-                    <th>User Name</th>
-                    <th>Email</th>
-                    <th>Password</th>
-                    <th>Modify</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  @if (Model.Count() == 0)
-                  {
-                    <tr>
-                      <td> No user registered </td>
-                    </tr>
-                  }
-                  else
-                  {
-                    var i = 0;
-                    foreach (AppUser user in Model)
-                    {
-                      <tr>
-                        <td>@i</td>
-                        <td>@user.Id</td>
-                        <td>@user.UserName</td>
-                        <td>@user.Email</td>
-                        <td>@user.PasswordHash</td>
-                        <td>
-                          <form asp-action="Delete" asp-route-id="@user.Id" method="post">
-                            <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Edit</a>
-                            <button type="submit" class="btn btn-sm btn-danger">
-                              Delete
-                            </button>
-                          </form>
-                        </td>
-                      </tr>
-                    }
-                  }
+    <!-- Main content -->
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="card-title">Danh Sách Người Dùng</h3>
+                        </div>
+                        <!-- /.card-header -->
+                        <div class="card-body">
+                            <div class="table-responsive table--no-card m-b-30">
+                            <table id="example2" class="table table-borderless table-striped table-earning">
+                                <thead>
+                                    <tr>
+                                        <th>STT</th>
+                                        <th>ID</th>
+                                        <th>User Name</th>
+                                        <th>Email</th>
+                                        <th>Password</th>
+                                        <th>Modify</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @if (Model.Count() == 0)
+                                    {
+                                        <tr>
+                                        <td> No user registered </td>
+                                        </tr>
+                                    }
+                                    else
+                                    {
+                                    var i = 0;
+                                    foreach (AppUser user in Model)
+                                    {
+                                        <tr>
+                                            <td>@i</td>
+                                            <td>@user.Id</td>
+                                            <td>@user.UserName</td>
+                                            <td>@user.Email</td>
+                                            <td>@user.PasswordHash</td>
+                                            <td>
+                                            <form asp-action="Delete" asp-route-id="@user.Id" method="post">
+                                            <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Edit</a>
+                                            <button type="submit" class="btn btn-sm btn-danger">
+                                            Delete
+                                            </button>
+                                            </form>
+                                            </td>
+                                        </tr>
+                                    }
+                                    }
 
-                </tbody>
-
-              </table>
+                                </tbody>
+                            </table>
+                            </div>
+                        </div>
+                        <!-- /.card-body -->
+                    </div>
+                <!-- /.card -->
+                </div>
+                <!-- /.col -->
             </div>
-            <!-- /.card-body -->
-          </div>
-          <!-- /.card -->
+            <!-- /.row -->
         </div>
-        <!-- /.col -->
-      </div>
-      <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
-  </section>
-  <!-- /.content -->
+        <!-- /.container-fluid -->
+    </section>
+<!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
 </div>
