--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -14,57 +14,18 @@
                             <div class="box-user-list box-list">
                                 <h5 class="vcrx-title">Người dùng</h5>
                                 <div class="group-user">
-                                    <div>
+                                    <div id="teacher-part">
                                         <p class="user-title">Giáo viên</p>
                                         <div class="contact-list-panel">
                                             <ul id="contacts" class="list-group list-group-striped">
-                                                <li class="contact-list-item">
-                                                    <div class="group-icon-device">
-                                                        <div class="box-icon-device">
-                                                            <div class="icon-network connect-good"></div>
-                                                            <div class="icon-user icon-teacher">
-                                                                <svg class="icon icon-px_ic_teacher">
-
-                                                                </svg>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="contact-list-item-name">
-                                                        <span data-title="teacher" class="user-role">
-                                                            <span class="role-device">teacher</span><br>
-                                                        </span>
-                                                        <span class="user-name" title="Vuk LAZAREVIĆ-180882">Vuk LAZAREVIĆ-180882</span>
-                                                    </div>
-                                                </li>
+                                                
                                             </ul>
                                         </div>
                                     </div>
-                                    <div>
+                                    <div id="student-part">
                                         <p class="user-title">Học sinh (<span class="user-count">1</span>)</p>
                                         <div class="contact-list-panel">
                                             <ul id="contacts" class="list-group list-group-striped">
-                                                <li class="contact-list-item">
-                                                    <div class="group-icon-device">
-                                                        <div class="box-icon-device">
-                                                            <div class="icon-network connect-good"></div>
-                                                            <div class="icon-user icon-teacher">
-                                                                <svg class="icon icon-px_ic__Device__Website">
-                                                                    <use xlink:href="#icon-px_ic__Device__Website">
-                                                                    </use>
-                                                                </svg>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="contact-list-item-name">
-                                                        <span data-title="student"
-                                                              class="user-role">
-                                                            <span class="role-device">student</span><br>
-                                                        </span><span class="user-name" title="Ngân Vũ Thị Thanh-288774">
-                                                            Ngân
-                                                            Vũ Thị Thanh-288774
-                                                        </span>
-                                                    </div>
-                                                </li>
                                             </ul>
                                         </div>
                                     </div>
