thêm ủy quyền , tạo tài khoản admin

--- a/AppEducation/AppEducation/Views/Home/Index.cshtml
+++ b/AppEducation/AppEducation/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                                 <h1>Đăng Nhập</h1>
                                 <h2>Lập Tức</h2>
                                 <h3>Để Học Tập</h3>
-                                <a href="#">Đăng Nhập</a>
+                                <a asp-action="Login" asp-controller="Account" asp-area="">Đăng Nhập</a>
                             </div>
                         </div>
                     </div>
