--- a/AppEducation/AppEducation/Views/Shared/_LayoutRegister.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutRegister.cshtml
@@ -1,12 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WebAppEducation</title>
     <link href="~/pages/register/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
     <link href="~/pages/register/vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link
+    href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
     <link href="~/pages/register/vendor/select2/select2.min.css" rel="stylesheet" media="all">
     <link href="~/pages/register/vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
     <link href="~/pages/register/css/Register.css" rel="stylesheet" media="all">
@@ -14,6 +17,7 @@
     <link rel="stylesheet" href="~/pages/register/bootstrap.css">
     @RenderSection("Head", required: false)
 </head>
+
 <body>
     <!-- header-top-area-start -->
     <div class="header-top-area">
@@ -33,6 +37,53 @@
             </div>
         </div>
     </div>
+    <!-- header-mid-area-start -->
+    <div class="header-mid-area ptb-40">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-5 col-xs-12">
+                    <div class="header-search">
+                        <form action="#">
+                            <input type="text" placeholder="Search entire store here..." />
+                            <a href="#"><i class="fa fa-search"></i></a>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-4 col-xs-12">
+                    <div class="logo-area text-center logo-xs-mrg">
+                        <a href="index.html"><img src="~/pages/login/img/logo.png" alt="logo" /></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- main-menu-area-start -->
+    <div class="main-menu-area hidden-sm hidden-xs sticky-header-1" id="header-sticky">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="text-center" style="margin-left: 300px;">
+                        <div class="menu-area">
+                            <div class="safe-area">
+                                <a asp-area="" asp-controller="Home" asp-action="Index">Trang Chủ</a>
+                            </div>
+                            <div class="safe-area">
+                                <a asp-area="" asp-controller="Account" asp-action="Register">Đăng Kí</a>
+                            </div>
+                            <div class="safe-area">
+                                <a asp-area="" asp-controller="Account" asp-action="Login">Đăng Nhập</a>
+                            </div>
+                            <div class="safe-area">
+                                <a href="#">Liên Hệ</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- main-menu-area-end -->
+    <!-- header-mid-area-end -->
     @RenderBody()
     <!-- start footer Area -->
     <footer>
@@ -84,7 +135,7 @@
                                     236 Hoàng Quốc Việt
                                 </p>
                                 <p><span>Số Điện Thoại:</span> (+84)0123456789</p>
-                                <p><span>Gmail:</span>  Education@gmail.com</p>
+                                <p><span>Gmail:</span> Education@gmail.com</p>
                             </div>
                         </div>
                     </div>
@@ -119,4 +170,5 @@
     <script src="~/pages/register/js/global.js"></script>
     <script src="~/pages/register/bootstrap.js"></script>
 </body>
+
 </html>
