--- a/AppEducation/AppEducation/wwwroot/pages/register/css/Register.css
+++ b/AppEducation/AppEducation/wwwroot/pages/register/css/Register.css
@@ -121,7 +121,8 @@ button {
    #PAGE WRAPPER
    ========================================================================== */
 .page-wrapper {
-  min-height: 100vh;
+  justify-content : content;
+  padding: 30px 0px 30px;
 }
 
 body {
@@ -173,11 +174,11 @@ h6 {
    #SPACING
    ========================================================================== */
 .p-t-100 {
-  padding-top: 100px;
+  padding-top: 50px;
 }
 
 .p-t-130 {
-  padding-top: 130px;
+  padding-top: 50px;
 }
 
 .p-t-180 {
@@ -605,7 +606,7 @@ input {
 }
 
 .card-4 {
-  background: #555;
+  background : black;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
